add find moudle